Bug 568129 - Don't reset the delayed flash reply message flag, triggering the call at some point during fullscreen tear down. r=bent, a=beltzner.