dom/plugins/PluginModuleChild.cpp
@@ -1841,8 +1841,6 @@ PluginModuleChild::ExitedCall()
 LRESULT CALLBACK
 PluginModuleChild::CallWindowProcHook(int nCode, WPARAM wParam, LPARAM lParam)
 {
-    gDelayFlashFocusReplyUntilEval = false;
-
     // Trap and reply to anything we recognize as the source of a
     // potential send message deadlock.
     if (nCode >= 0 &&
